# leonhard

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  readme.md
cmake_test/: CMakeLists.txt  pi_leibniz.f95
fibonacci_cpp/: CMakeLists.txt  fibonacci.cbp  main.cpp
libmath/: collatz.hpp  digits.hpp  fibonacci.hpp  prime.hpp
modules_fortran/: divisible.f95  fibonacci_1_2.f95  readme.md
p001_multiples_of_3_and_5/: CMakeLists.txt  p001.f95
p002_even_fibonacci_numbers/: CMakeLists.txt  p002.f95
p003_largest_prime_factor/: CMakeLists.txt  main.cpp  p003.cbp
p014_longest_collatz_sequence/: CMakeLists.txt  main.cpp  p014.cbp
pxxx/: CMakeLists.txt
pxxx/p001_multiples_of_3_and_5/: CMakeLists.txt
pxxx/p002_even_fibonacci_numbers/: CMakeLists.txt  p002.f95  what-shall-be-done.md
pxxx/p003_largest_prime_factor/: CMakeLists.txt  main.cpp  p003.cbp
pxxx/p004_largest_palindrome_product/: CMakeLists.txt  main.cpp  p004.cbp
pxxx/p005_smallest_multiple/: CMakeLists.txt  main.cpp  p005.cbp
pxxx/p006_sum_square_difference_cpp/: CMakeLists.txt  p006.cpp
pxxx/p006_sum_square_difference_fortran/: CMakeLists.txt  p006.f95
pxxx/p007_10001st_prime/: CMakeLists.txt  main.cpp  p007.cbp
pxxx/p008_largest_product_in_series/: CMakeLists.txt  p008.cbp  p008.cpp
pxxx/p009_special_pythagorean_triplet_cpp/: CMakeLists.txt  p009.cpp
pxxx/p009_special_pythagorean_triplet_fortran/: CMakeLists.txt  p009.f95
pxxx/p014_longest_collatz_sequence/: CMakeLists.txt  main.cpp  p014.cbp
