cmake_minimum_required (VERSION 2.8)
# Recurse into subdirectory for problem 1.
add_subdirectory (p001_multiples_of_3_and_5)

# Recurse into subdirectory for problem 2.
add_subdirectory (p002_even_fibonacci_numbers)

# Recurse into subdirectory for problem 3.
add_subdirectory (p003_largest_prime_factor)

# Recurse into subdirectory for problem 4.
add_subdirectory (p004_largest_palindrome_product)

# Recurse into subdirectory for problem 5.
add_subdirectory (p005_smallest_multiple)

# Recurse into subdirectories for problem 6.
add_subdirectory (p006_sum_square_difference_cpp)
add_subdirectory (p006_sum_square_difference_fortran)

# Recurse into subdirectory for problem 7.
add_subdirectory (p007_10001st_prime)

# Recurse into subdirectories for problem 9.
add_subdirectory (p009_special_pythagorean_triplet_fortran)
add_subdirectory (p009_special_pythagorean_triplet_cpp)

# Recurse into subdirectory for problem 14.
add_subdirectory (p014_longest_collatz_sequence)
